Overview of changes from 0.5.0 (r3097 + private modifications)
==
* New features

  - Support format strings (covers SRFI-28 and SRFI-48)


Overview of changes from 0.5.0-alpha (r2902 + private modifications)
==
* New features

  - Support 64-bit data models (storage-compact is not yet)

  - Add lacking character predicates and complete all R5RS character procedures

  - Add lacking string predicates and complete all R5RS string procedures

  - Support constant list (storage-compact does not)

  - Support constant vector (storage-compact is not yet)

  - Add quote-less vector literal check

* Fixes

  - Make behavior of internal definitions strictly conforming to R5RS

  - Make C99-dependent stdint.h unneeded